--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
     <header>
         <h1>Bienvenidos a mi Pagina Web</h1>
     </header>
-    <p>
-        <link href: "https://www.mediafire.com/file/8m2a62sinsg10wj/Practica3_Fryda.rar/file">
+    <p class="Hola">
+        <a target="_blank" href="https://www.mediafire.com/file/8m2a62sinsg10wj/Practica3_Fryda.rar/file">"Hola"</a>
     </p>
 </body>
 </html>
